# Intelligent-version-control

./: .gitignore  Makefile  README.md  docker-compose.yaml  environment.yml  ivc.py  pyproject.toml
src/: __init__.py
src/components/: chatbot.py
tcss/: ivc.tcss
